2015-06-11  Per Bothner  <per@bothner.com>

	* Sequences.java (asSequenceOrNull, coerceToSequence, getSize):
	New methods.
	(getIterator): Use asSequenceOrNull.
	* SubCharSeq.java: Implement Externalizable.
	* TreeList.java (getNextKindI): Fix handling of CHAR_FOLLOWS.

2015-06-10  Per Bothner  <per@bothner.com>

	Efficient treatment of CharSequences as sequences of Unicode characters.
	* AbstractCharVector.java: New abstract class extends SimpleVector.
	Move some code from FString.java to here.
	* CharSeq.java: Change to extend Sequence<Char> (20-bit code points)
	rather than Sequence<Character> (16-bit code units).
	(subSequence): Return CharSeq rather than CharSequence.
	* CharVector.java: New class, extends AbstractCharVector.
	This extends Sequence<Character>, and is meant to wrap char arrays.
	* FString.java: Change to extend AbstractCharVector.
	* Sequences.java (getIterator): For char[] return a CharVector
	rather than an FString.
	* CharBuffer.java: Parameterize by Char, not Character.
	* Strings.java (characterAt) Add overload which takes start and
	end indexes.
	* SubCharSeq.java: Parameterize by Char, not Character.
	Use new Strings.characterAt method.
	* FString.java (delete, insertRepeated): New methods.
	(<init>(int,int)): Re-write to use insetRepeated.

2015-06-07  Per Bothner  <per@bothner.com>

	Tweak SimpleVector classes for performace (use primitive values more),
	and to use new unsigned primitive types.
	Also fix pervasive off-by-one comparison bug.
	Add add 'add' methods taking primitive value.
	* BitVector.java: Parameterize as SimpleVector<Boolean>.
	* CharBuffer.java: Parameterize as <Character>.
	* CharSeq.java: Parameterize as Sequence<Character>.
	* F32Vector.java: Parameterize as SimpleVector<Float>.
	* F64Vector.java: Parameterize as SimpleVector<Double>.
	* FString.java: Parameterize as SimpleVector<Character>.
	* PrimIntegerVector.java: New abstract class extends SimpleVector.