@@ -1,3 +1,8 @@
+2015-06-12  Per Bothner  <per@bothner.com>
+
+	* standard/Scheme.java (initScheme): Change binding of
+	"$bracket-list$" to a macro.
+
 2015-06-11  Per Bothner  <per@bothner.com>
 
 	* standard/Scheme.java (initScheme): Bind "sequence" and
