@@ -1,3 +1,8 @@
+2015-06-12  Per Bothner  <per@bothner.com>
+
+	* syntax.scm ($bracket-list$): New macro.  Handle range and
+	vector construction.
+
 2015-06-11  Per Bothner  <per@bothner.com>
 
 	* lists.scm (lenegth): No handles general sequences.
